--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             // 页脚
             footer: {
               copy: '<span>Copyright &copy; 2024 &nbsp 💖 &nbsp</span>',
-              auth: ' <strong><a href="https://github.com/XiaoCheng991" target="_blank">Mr.XiaCheng</a></strong>',
+              auth: ' <strong><a href="https://github.com/XiaoCheng991" target="_blank">Mr.XiaoCheng</a></strong>',
               pre: '<hr/>',
               style: 'font-size: 18px; text-align: center;',
             },
