--- a/index.html
+++ b/index.html
@@ -153,5 +153,8 @@
     <script src="//cdn.jsdelivr.net/npm/docsify-sidebar-collapse/dist/docsify-sidebar-collapse.min.js"></script>
     <!-- 分享 -->
     <script src="//unpkg.com/docsify-share/build/index.min.js"></script>
+    <!-- iframe -->
+    <script src="//cdn.jsdelivr.net/npm/codeblock-iframe@latest/dist/index.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/docsify-codeblock-iframe@latest/dist/index.min.js"></script>
 </body>
 </html>
